// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="page page-limited"
>
  <AnalyzeTutorial
    component={
      Object {
        "breadcrumbs": Array [],
        "key": "my-project",
        "name": "MyProject",
        "organization": "foo",
        "qualifier": "TRK",
        "qualityGate": Object {
          "isDefault": true,
          "key": "30",
          "name": "Sonar way",
        },
        "qualityProfiles": Array [
          Object {
            "deleted": false,
            "key": "my-qp",
            "language": "ts",
            "name": "Sonar way",
          },
        ],
        "tags": Array [],
        "version": "0.0.1",
      }
    }
    currentUser={
      Object {
        "groups": Array [],
        "isLoggedIn": true,
        "login": "luke",
        "name": "Skywalker",
        "scmAccounts": Array [],
      }
    }
  />
</div>
`;

exports[`renders correctly 2`] = `
<div
  className="page page-limited"
/>
`;

exports[`renders correctly 3`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch"
      id="provisioning.no_analysis_on_main_branch"
      values={
        Object {
          "branchName": "master",
        }
      }
    />
  </Alert>
</div>
`;

exports[`should not render the tutorial for applications 1`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    provisioning.no_analysis.application
  </Alert>
</div>
`;

exports[`should render another message when there are branches 1`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch.bad_configuration"
      id="provisioning.no_analysis_on_main_branch.bad_configuration"
      values={
        Object {
          "branchName": "master",
          "branchType": "branches.main_branch",
        }
      }
    />
  </Alert>
</div>
`;

exports[`should render another message when there are branches 2`] = `
<div
  className="page page-limited"
>
  <Alert
    variant="warning"
  >
    <FormattedMessage
      defaultMessage="provisioning.no_analysis_on_main_branch.bad_configuration"
      id="provisioning.no_analysis_on_main_branch.bad_configuration"
      values={
        Object {
          "branchName": "master",
          "branchType": "branches.main_branch",
        }
      }
    />
  </Alert>
</div>
`;
